# sanco-server

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 15150da26aba_add_session_type_to_chat_session.py  2057a7b26f43_add_transcription_table.py  27f43f40fecc_insert_initial_services_data.py  6b040c4e4fd6_your_description.py  7fe59fd5e2e1_initial_migration.py  898b51d238e0_add_message_table.py  8e34acdfe057_new_analytics_tables.py  bcee321b582c_add_transcription_table.py  becc7e6faeba_add_services_and_service_media_tables.py  c5784994ef8e_add_lead_table.py
app/: main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: analytics.py  auth.py  chat.py  leads.py  livekit.py  transcriptions.py  users.py
app/core/: config.py  db.py  redis.py  security.py
app/crud/: base.py  crud_user.py
app/data/: sanco.txt
app/db/: base.py  base_class.py  session.py
app/models/: analytics_event.py  chat_feedback.py  chat_session.py  lead.py  message.py  service_media.py  services.py  transcriptions.py
app/schemas/: __init__.py  analytics.py  chat.py  livekit.py  transcription.py
app/services/: analytics_service.py  auth_service.py  chat_memory.py  chat_service.py  chatbot.py  lead_service.py  livekit_service.py  message_service.py  session_service.py  transcription_service.py
scripts/: prestart.sh  run.sh
